--- a/public/css/default.css
+++ b/public/css/default.css
@@ -37,6 +37,7 @@ body { padding: 0; margin: 0; background-color: #E0E0E0; font-family: Arial; }
 .objects .name span { font-weight: normal; font-size: 11px; float: right; color: #777; }
 .objects .name em { font-weight: normal; font-size: 11px; color: #777; margin-left: 5px; }
 .objects .caption { padding: 12px 10px 5px; font-size: 12px; color: #999; }
+.objects .caption:first-child { padding-top: 0; }
 
 .ui-dark .objects figure { background-color: #333; }
 .ui-dark .objects figure:hover { border-color: #404040; }
@@ -85,5 +86,8 @@ body { padding: 0; margin: 0; background-color: #E0E0E0; font-family: Arial; }
 .dm-lg { width: 1280px; }
 
 .ui-dark .dm { border-color: #404040; }
-
 .ui-notify-container { z-index: 1001; }
+
+.ui-windows-resizer { z-index: 100; }
+.ui-windows-item { box-shadow: 1px 1px 30px rgba(0,0,0,0.25); }
+.ui-dark .ui-windows-item { box-shadow: 1px 1px 30px rgba(0,0,0,0.5); }
