--- a/public/css/default.css
+++ b/public/css/default.css
@@ -27,20 +27,20 @@ body { padding: 0; margin: 0; background-color: #E0E0E0; font-family: Arial; }
 .ui-layout-section { background: #FFF; }
 .ui-dark { background-color: #404040; }
 
-.objects { padding: 0; }
-.objects figure { height: 27px; font-size: 11px; padding: 0 5px; margin: 0 10px 5px; border-radius: var(--radius); cursor: grab; line-height: 23px; background-color: #F8F8F8; border: 1px solid transparent; }
-.objects .caption i { float: left; font-size: 11px; margin: 2px 5px 0 0; }
-.objects figure:hover { border-color: #E0E0E0; }
-.objects figure i { width: 13px; margin: 7px 6px 0 0; text-align: center; float: left; font-size: 12px; text-align: center; }
-.objects .name { font-size: 12px; padding-top: 2px; }
-.objects .name div { margin-right: 20px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
-.objects .name span { font-weight: normal; font-size: 11px; float: right; color: #777; }
-.objects .name em { font-weight: normal; font-size: 11px; color: #777; margin-left: 5px; }
-.objects .caption { padding: 12px 10px 5px; font-size: 12px; color: #999; }
-.objects .caption:first-child { padding-top: 0; }
+.components { padding: 0; }
+.components figure { height: 27px; font-size: 11px; padding: 0 5px; margin: 0 10px 5px; border-radius: var(--radius); cursor: grab; line-height: 23px; background-color: #F8F8F8; border: 1px solid transparent; }
+.components .caption i { float: left; font-size: 11px; margin: 2px 5px 0 0; }
+.components figure:hover { border-color: #E0E0E0; }
+.components figure i { width: 13px; margin: 7px 6px 0 0; text-align: center; float: left; font-size: 12px; text-align: center; }
+.components .name { font-size: 12px; padding-top: 2px; }
+.components .name div { margin-right: 20px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
+.components .name span { font-weight: normal; font-size: 11px; float: right; color: #777; }
+.components .name em { font-weight: normal; font-size: 11px; color: #777; margin-left: 5px; }
+.components .caption { padding: 12px 10px 5px; font-size: 12px; color: #999; }
+.components .caption:first-child { padding-top: 0; }
 
-.ui-dark .objects figure { background-color: #333; }
-.ui-dark .objects figure:hover { border-color: #404040; }
+.ui-dark .components figure { background-color: #333; }
+.ui-dark .components figure:hover { border-color: #404040; }
 
 .header { background-color: #FFF; height: 45px; padding-left: 0; box-shadow: 0 2px 5px rgba(0,0,0,0.05); left: 0; right: 0; }
 .header button, .header a { margin: 6px 2px 0 0; float: left; border: 0; background-color: transparent; border-radius: var(--radius); padding: 0; min-width: 34px; height: 32px; font-size: 16px; line-height: 32px; text-decoration: none !important; text-align: center; color: #000; }
@@ -61,8 +61,9 @@ body { padding: 0; margin: 0; background-color: #E0E0E0; font-family: Arial; }
 .header button:disabled { color: #D0D0D0; cursor: not-allowed; background-color: transparent !important; }
 .header button.selected { background-color: #F0F0F0; }
 .header button.special, .header a.special { color: #99982F; }
-.header > div { float: left; margin: 0 0 0 8px; padding-right: 6px; border-right: 1px solid #E0E0E0; height: 44px; }
+.header > div, .header > ui-bind { float: left; margin: 0 0 0 8px; padding-right: 6px; border-right: 1px solid #E0E0E0; height: 44px; }
 .header .apply-button { margin-left: 0; }
+.header .beta { background-color: #E73323; color: #FFF; padding: 2px 3px; border-radius: var(--radius); font-size: 11px; top: 9px; position: relative; margin-left: 10px; }
 
 .ui-dark .header { background-color: #202020; }
 .ui-dark .header button, .ui-dark .header a { background-color: transparent; color: #777; }
@@ -91,3 +92,24 @@ body { padding: 0; margin: 0; background-color: #E0E0E0; font-family: Arial; }
 .ui-windows-resizer { z-index: 100; }
 .ui-windows-item { box-shadow: 1px 1px 30px rgba(0,0,0,0.25); }
 .ui-dark .ui-windows-item { box-shadow: 1px 1px 30px rgba(0,0,0,0.5); }
+
+.controls { float: right; margin-right: 10px; }
+.controls button { width: 22px; height: 22px; border: 0; background-color: #FFF; line-height: 22px; padding: 0 5px; border-radius: var(--radius); margin-left: 2px; }
+.controls button:first-child { margin-left: 0; }
+.controls button:hover { background-color: #F0F0F0; }
+
+.ui-dark .controls button { background-color: transparent; }
+.ui-dark .controls button:hover { background-color: #303030; }
+#dappcontainer { position: relative; }
+.UI_floating { cursor: grab; }
+
+.ui-box .search { height: 30px; }
+.ui-box .search .ui-searchinput { border: 0; border-bottom: 1px solid #E0E0E0; padding-left: 15px; }
+.ui-dark .ui-box .search .ui-searchinput { border-color: #404040; }
+
+.icon-right { font-size: 44px; }
+
+.UI_special { background-color: #F8F8F8; background-image: repeating-linear-gradient(45deg, #F3F3F3, #F3F3F3 10px, #F9F9F9 10px, #F9F9F9 20px); padding: 15px; border-radius: var(--radius); font-size: 12px; position: relative; color: #999; }
+.UI_special label { color: #444; font-size: 14px; font-weight: bold; display: block; }
+.UI_special > i { margin: -24px 0 0 -24px; width: 24px; height: 24px; background-color: #FFF; border-radius: 100px; line-height: 23px; position: absolute; text-align: center; box-shadow: 0 2px 3px rgba(0,0,0,0.05); border: 1px solid #F0F0F0; }
+.UI_floating.UI_special { border: 1px solid #E9E9E9; }
