--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1,3 +1,3 @@
-.ui-uibuildereditor { height: 500px; margin: 5px; }
-.ui-uibuildereditor-hover { background: #FFF7D4 !important; }
+.ui-uibuildereditor { min-height: 500px; }
+.ui-uibuildereditor-hover { background: rgba(255,247,212,0.2) !important; }
 .ui-uibuildereditor [contenteditable] { outline: 0; }
